# CameraMoCap

./: .gitignore  CMakeLists.txt
include/: constants.h  err_codes.h  loader.h  magic_debug.h  user_alerts.h  util.h
lib/: freeglutd.lib
src/: CMakeLists.txt  loader.c  magic_debug.h  main.cpp  testshader.frag  testshader.vert  user_alerts.c  util.c
